image stretch responsive fixed

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -82,8 +82,7 @@
     }
 
     .rest-card-image {
-        height: 100px;
-        width: 100%;
+        height: auto;
     }
 
     .header {
